# gensched

./: gensched.py  requirements.txt  schedule-generator.py  setup.cfg
gensched/: cli.py  gensched.py  models.py
