[metadata]
name = gensched
version = 0.1
url = https://github.com/matrixise/gensched
description = Schedule Generator for Trainings
long_description = file: README.md
long_description_content_type = text/x-markdown
author = Stéphane Wirtel
author_email = stephane@wirtel.be
project_urls =
    Source = https://github.com/matrixise/gensched
    Tracker = https://github.com/matrixise/gensched/issues
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
	pyyaml
	python-frontmatter
	pytimeparser
	pydantic
	pydantic-yaml
	humanize
	pandas
	tabulate

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    gensched = gensched.__main__:main

[bdist_wheel]
universal = 0
